; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_uri.c_xmlCreateURI.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_uri.c_xmlCreateURI.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"creating URI structure\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @xmlCreateURI() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i64 @xmlMalloc(i32 4)
  %4 = inttoptr i64 %3 to i32*
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 @xmlURIErrMemory(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %1, align 8
  br label %13

9:                                                ; preds = %0
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @memset(i32* %10, i32 0, i32 4)
  %12 = load i32*, i32** %2, align 8
  store i32* %12, i32** %1, align 8
  br label %13

13:                                               ; preds = %9, %7
  %14 = load i32*, i32** %1, align 8
  ret i32* %14
}

declare dso_local i64 @xmlMalloc(i32) #1

declare dso_local i32 @xmlURIErrMemory(i8*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
